<resources>
    <string name="app_name">ReponsiUTS</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="search_hint" />
    <string name="todo">TODO</string>
    <string name="daftar_judul">Daftar Judul</string>
    <string name="ini_adalah_contoh_text_deskripsi">Ini adalah contoh text deskripsi</string>
    <string name="judul">Judul</string>
    <string name="diskripsi">Diskripsi</string>
    <string name="search">Search..</string>
    <string name="btnLengkap">LENGKAP</string>
    <string name="txt1">First Man</string>
    <string name="txt2">First Man is a 2018 American biographical drama film directed by Damien Chazelle </string>
    <string name="tv2">Tanggal Tayang 2018/10/11</string>
    <string name="tv3">First Man is a 2018 American biographical drama film directed by Damien Chazelle and written by Josh Singer. Based on the book First Man: The Life of Neil A. Armstrong by James R. Hansen, the film stars Ryan Gosling as Neil Armstrong, alongside Claire Foy, Jason Clarke, Kyle Chandler, Corey Stoll, Ciarán Hinds, Christopher Abbott, Patrick Fugit, and Lukas Haas, and follows the years leading up to the Apollo 11 mission to the Moon in 1969. Steven Spielberg serves as an executive producer.[5]First Man had its world premiere at the Venice Film Festival on August 29, 2018, and was theatrically released in the United States on October 12, 2018, by Universal Pictures. The film was critically praised, especially for Gosling and Foys performances, Chazelles direction and the Moon landing sequence, and has grossed $74 million worldwide.</string>
    <string name="asd">asd</string>
    <string name="txt3">Incredible 2</string>
    <string name="txt4">Incredibles 2 is a 2018 American computer-animated superhero film produced</string>
    <string name="tv4">Tanggal Tayang 2018/6/5</string>
    <string name="tv5">Incredibles 2 is a 2018 American computer-animated superhero film produced by Pixar Animation Studios and distributed by Walt Disney Pictures. Written and directed by Brad Bird, it is the sequel to The Incredibles (2004) and the second installment of the franchise. The story follows the Parr family as they try to restore publics trust in superheroes while balancing their family life, only to combat a new foe who seeks to turn the populace against all superheroes. Craig T. Nelson, Holly Hunter, Sarah Vowell and Samuel L. Jackson reprise their roles from the first film; newcomers to the cast include Huckleberry Milner (replacing Spencer Fox), Bob Odenkirk, Catherine Keener and Jonathan Banks (replacing Bud Luckey). Michael Giacchino returned to compose the score.</string>
    <string name="txt5">JUDUL FILM</string>
    <string name="txt6">DESKRIPSI FILM</string>
</resources>
